# Cpp-Template-Sub1

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
include/Cpp-Template-Sub1/: cpptemplatesub1.h
src/: cpptemplatesub1.cpp
tests/: CMakeLists.txt  test_cpptemplatesub1.cpp
